Adding icon to the extension

--- a/blocksites/popup.html
+++ b/blocksites/popup.html
@@ -35,6 +35,7 @@ p {
 </head>
 <body>
 <H3>Block my site!</H3>
+<Button id='blockButton'> <-- Block this site!</button>
 
 <p>Sites to block: </p>
 <input placeholder="Type and press enter.." type="text" id="textfield"/>.com
