Removing .com as default

--- a/blocksites/popup.html
+++ b/blocksites/popup.html
@@ -17,7 +17,7 @@ input[type=submit] {padding:5px 15px; background:#ccc; border:0 none;
     border-radius: 5px; }
 
 body {
-    background-color: lightblue;	
+    background-color: #5bc0de;	
     min-width:200px;
 
 }
@@ -38,7 +38,7 @@ p {
 <Button id='blockButton'> <-- Block this site!</button>
 
 <p>Sites to block: </p>
-<input placeholder="Type and press enter.." type="text" id="textfield"/>.com
+<input placeholder="Type and press enter.." type="text" id="textfield"/>
 
 <span id="sp1"></span>
 <div id="some_div">
